css/app.css
.hamburger:hover, li:hover {
    background: #323232;
}

#lumavi-logo{
    position: fixed;
    width: 14.25em;
    top: 0;
    left: 0;
    -webkit-backface-visibility: hidden;
            backface-visibility: hidden;
    z-index: 100;
}

nav {
    position: fixed;
    width: 6.25em;
    top: 0;
    right: 0;
    -webkit-backface-visibility: hidden;
            backface-visibility: hidden;
    z-index: 100;
}

nav a {
    text-decoration: none;
    color: inherit;
}

nav ul {
    padding: 0;
    margin: 0;
    list-style-type: none;
}

.hamburger {
    position: relative;
    z-index: 2;
    height: 7%; height: 7vh;
    cursor: pointer;
    background: #353535;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
        -ms-flex-pack: center;
            justify-content: center;
    -webkit-box-align: center;
    -webkit-align-items: center;
        -ms-flex-align: center;
            align-items: center;
}

.patty {
    position: relative;
    width: 2.5em;
    height: 2px;
    background: #fff;
    border-radius: 5px;
    -webkit-transition: all 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
            transition: all 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
}

.patty:before,
.patty:after {
    content: "";
    position: absolute;
    width: 2.5em;
    height: 2px;
    background: #fff;
    border-radius: 5px;
}

.patty:before {
    top: -10px;
}

.patty:after {
    top: 10px;
}

.patty, .patty:after, .patty:before {
    -webkit-transition: 400ms;
    transition: 400ms
}

.hamburger.menu--active .patty {
    background: transparent;
}

.hamburger.menu--active .patty:before {
    -webkit-transform: rotate(45deg);
            transform: rotate(45deg);
    top: 0px;
}

.hamburger.menu--active .patty:after {
    -webkit-transform: rotate(-45deg);
            transform: rotate(-45deg);
    top: 0px;
}

.nav-list {
    background: #353535;
    color: #fff;
    height: 30%; height: 30vh;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-flow: column wrap;
        -ms-flex-flow: column wrap;
            flex-flow: column wrap;
    
    -webkit-transform: translateY(-100%);
            transform: translateY(-100%);
    -webkit-transition: all 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
            transition: all 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
}

.nav-list.list__active {
    -webkit-transform: translateY(0px);
            transform: translateY(0px);
}

.nav__item {
    position: relative;
    -webkit-box-flex: 1;
    -webkit-flex: 1;
        -ms-flex: 1;
            flex: 1;
}

.nav__link {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    font-size: 2em;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
        -ms-flex-pack: center;
            justify-content: center;
    -webkit-box-align: center;
    -webkit-align-items: center;
        -ms-flex-align: center;
            align-items: center;
}

.c_red { color: #f05252; }
.c_blue { color: #52b4f0; }
.c_yellow { color: #f4ee6a; }
.c_green { color: #6af46c; }

/*******/
.team-member-desc img{
    border-radius: 50%;
    width: 150px;
}

.container{
    padding: 100px 0;
}

#intro{
    background-color: rgb(222, 161, 66);
    color: #fff;
}

#intro hr{
    max-width: 50px;
    border-bottom: 3px solid #fff;
}

.section-heading{
    margin-top: 0;
}

#web-container{
    background-color: rgb(0, 177, 217);
    color: #fff;
}

#videogame-container{
    background-color: rgb(213, 69, 60);
    color: #fff;
}

.fullwidth{
    width: 100%;
    margin-left: auto;
    margin-right: auto;
    max-width: initial;
}

.footer {
  background-color: #292c2f;
  text-align: center;
  font-size: 1.2rem;
  padding: 1rem; }
  .footer .social a {
    display: inline-block;
    width: 2rem;
    height: 2rem;
    background-color: #33383b;
    border-radius: 2px;
    font-size: 1.5rem;
    color: #fff;
    text-align: center;
    line-height: 2rem;
    margin: 0 3px 0 0; }
  .footer .copywrite {
    color: #8f9296;
    font-size: 0.875rem;
    margin: 1rem 0 1rem 0; }
  .footer .footer-form textarea, .footer .footer-form input {
    border-radius: 3px;
    background-color: #1f2022;
    box-shadow: 0 1px 0 0 rgba(255, 255, 255, 0.1);
    border: none;
    resize: none;
    font: inherit;
    font-size: 0.875rem;
    font-weight: normal;
    color: #d1d2d2;
    padding: 1.3rem; }
  .footer .footer-form label {
    color: #fff;
    font-size: 1.2rem;
    margin: 0 0 1rem 0;
    font-weight: bold; }
  .footer .footer-form .submit {
    border-radius: 3px;
    background-color: #33383b;
    color: #ffffff;
    border: 0;
    padding: 1rem 3.5rem;
    font-weight: bold;
    float: right;
    margin: 0 1rem 2rem 0; }
  .footer .footer-links a {
    list-style: none;
    font-weight: normal;
    color: #fff;
    padding: 3rem 0 2rem;
    margin: 0;
    font-size: 0.875rem; }
    .footer .footer-links a::after {
      content: "•";
      padding: 0 0.2rem 0 0.4rem; }
    .footer .footer-links a:last-child::after {
      content: "";
      padding: 0 0.4rem 0 0.8rem; }
  @media only screen and (min-width: 40.063em) {
    .footer {
      padding: 4rem; }
      .footer p {
        text-align: left; }
      .footer .social {
        text-align: left;
        margin: 0; }
      .footer .footer-form .contact {
        position: absolute;
        left: -45%;
        top: 10%; } }

.profile-card {
  padding: 1rem;
  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
  margin: 2rem 0;
  background-color: #fff;
  color: #000;
  }
  .profile-card img {
    width: 8rem;
    display: block;
    margin: 2rem auto;
    text-align: center;
    border-radius: 50%;
    box-shadow: 2px 2px 5px #888888; }
  .profile-card .profile-info {
    padding: 1rem; }
    .profile-card .profile-info h4 {
      margin-top: 0;
      text-align: center;
      text-transform: uppercase; }
    .profile-card .profile-info p {
      text-align: center; }
    .profile-card .profile-info .inline-list {
      text-align: center;
      margin-bottom: 1rem; }
      .profile-card .profile-info .inline-list li {
        float: none;
        display: inline-block; }
      .profile-card .profile-info .inline-list i.fi-social-facebook {
        font-size: 1.5rem;
        color: #3b5998; }
        .profile-card .profile-info .inline-list i.fi-social-facebook:hover {
          transform: scale(1.5);
          transition: all .5s ease-in-out; }
      .profile-card .profile-info .inline-list i.fi-social-twitter {
        font-size: 1.5rem;
        color: #55acee; }
        .profile-card .profile-info .inline-list i.fi-social-twitter:hover {
          transform: scale(1.5);
          transition: all .5s ease-in-out; }
      .profile-card .profile-info .inline-list i.fi-social-linkedin {
        font-size: 1.5rem;
        color: #0077b5; }
        .profile-card .profile-info .inline-list i.fi-social-linkedin:hover {
          transform: scale(1.5);
          transition: all .5s ease-in-out; }
      .profile-card .profile-info .inline-list i.fi-social-github {
        font-size: 1.5rem;
        color: #333; }
        .profile-card .profile-info .inline-list i.fi-social-github:hover {
          transform: scale(1.5);
          transition: all .5s ease-in-out; }
      .profile-card .profile-info .inline-list i.fi-social-youtube {
        font-size: 1.5rem;
        color: #cc181e; }
        .profile-card .profile-info .inline-list i.fi-social-youtube:hover {
          transform: scale(1.5);
          transition: all .5s ease-in-out; }

#web-anim{
  padding: .5rem;
  margin: 0 !important;
}

.mockup{
  border: 1px solid rgb(150,150,150);
  background-color: rgb(230,230,230);
  padding: 1rem;
  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
  margin: auto !important;
}

.mockups{
  border: 1px solid rgb(150,150,150);
  background-color: rgb(204,204,204);
  padding: 1rem;
  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
  margin: 0.3rem 0;
}

.img-responsive{
  max-width: 100%;
  height: auto;
}

#blue, #red, #orange, #lumavi-text{
  z-index: 1;
  position: absolute;
}

#points{
  z-index: 2;
  position: absolute;
}

